# rustc-arena-modified

./: Cargo.toml  README.md  bench.sh  flamegraph.sh
.github/workflows/: ci.yml
benches/: Cargo.toml  README.md  typed_arena.rs
criterion/alloc/alloc_and_leak/base/: benchmark.json
criterion/alloc/alloc_and_leak/change/: estimates.json
criterion/alloc/alloc_and_leak/new/: estimates.json  sample.json  tukey.json
criterion/alloc/alloc_and_leak/report/: index.html
criterion/alloc/report/: index.html
criterion/alloc/rustc_arena/base/: estimates.json  sample.json  tukey.json
criterion/alloc/rustc_arena/change/: estimates.json
criterion/alloc/rustc_arena/new/: benchmark.json  tukey.json
criterion/alloc/rustc_arena/report/: index.html
criterion/alloc/rustc_arena_modified/base/: sample.json  tukey.json
criterion/alloc/rustc_arena_modified/change/: estimates.json
criterion/alloc/rustc_arena_modified/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/alloc/rustc_arena_modified/report/: index.html
criterion/alloc/slab_arena/base/: sample.json
criterion/alloc/slab_arena/change/: estimates.json
criterion/alloc/slab_arena/new/: benchmark.json  estimates.json  tukey.json
criterion/alloc/slab_arena/report/: index.html
criterion/alloc_from_iter/report/: index.html
criterion/into_vec/report/: index.html
criterion/iter/report/: index.html
criterion/report/: index.html
src/: arena_chunk.rs  dropless_arena.rs  lib.rs  slab_arena.rs  typed_arena.rs
src/slab_arena/: tests.rs
src/typed_arena/: tests.rs
(+60 files in other folders)
